[metadata]
license_files = LICENSE

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files = ACKNOWLEDGEMENTS
            AUTHORS
            LICENSE
            README
build_requires = python3-setuptools
requires = libbde-python3 >= 20220121
           libcaes-python3 >= 20221127
           libcreg-python3 >= 20200725
           libesedb-python3 >= 20220806
           libevt-python3 >= 20191104
           libevtx-python3 >= 20220724
           libewf-python3 >= 20131210
           libfsapfs-python3 >= 20201107
           libfsext-python3 >= 20220112
           libfsfat-python3 >= 20220816
           libfshfs-python3 >= 20220115
           libfsntfs-python3 >= 20211229
           libfsxfs-python3 >= 20220113
           libfvde-python3 >= 20220121
           libfwnt-python3 >= 20210717
           libfwsi-python3 >= 20150606
           liblnk-python3 >= 20230205
           libluksde-python3 >= 20220121
           libmodi-python3 >= 20210405
           libmsiecf-python3 >= 20150314
           libolecf-python3 >= 20151223
           libphdi-python3 >= 20220110
           libqcow-python3 >= 20201213
           libregf-python3 >= 20201002
           libscca-python3 >= 20190605
           libsigscan-python3 >= 20230109
           libsmdev-python3 >= 20140529
           libsmraw-python3 >= 20140612
           libvhdi-python3 >= 20201014
           libvmdk-python3 >= 20140421
           libvsgpt-python3 >= 20211115
           libvshadow-python3 >= 20160109
           libvslvm-python3 >= 20160109
           python3-XlsxWriter >= 0.9.3
           python3-acstore >= 20230519
           python3-artifacts >= 20220219
           python3-bencode
           python3-certifi >= 2016.9.26
           python3-cffi >= 1.9.1
           python3-chardet >= 2.0.1
           python3-cryptography >= 2.0.2
           python3-dateutil >= 1.5
           python3-defusedxml >= 0.5.0
           python3-dfdatetime >= 20221112
           python3-dfvfs >= 20230407
           python3-dfwinreg >= 20211207
           python3-dtfabric >= 20230512
           python3-flor >= 1.1.3
           python3-future >= 0.16.0
           python3-idna >= 2.5
           python3-lz4 >= 0.10.0
           python3-opensearch
           python3-pefile >= 2021.5.24
           python3-psutil >= 5.4.3
           python3-pyparsing >= 2.4.2
           python3-pytsk3 >= 20210419
           python3-pytz
           python3-pyxattr >= 0.7.2
           python3-pyyaml >= 3.10
           python3-redis >= 3.4
           python3-requests >= 2.18.0
           python3-six >= 1.1.0
           python3-urllib3 >= 1.21.1
           python3-yara >= 3.4.0
           python3-zmq >= 2.1.11

[bdist_wheel]
universal = 1

