[metadata]
name = plaso
version = 20240116
description = Plaso (log2timeline) - Super timeline all the things
long_description = Plaso (log2timeline) is a framework to create super timelines. Its purpose is to extract timestamps from various files found on typical computer systems and aggregate them.
long_description_content_type = text/plain
url = https://github.com/log2timeline/plaso
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  plaso = plaso
packages = find:
python_requires = >=3.7
scripts =
  tools/image_export.py
  tools/log2timeline.py
  tools/pinfo.py
  tools/psort.py
  tools/psteal.py

[options.package_data]
plaso =
  parsers/*.yaml
  parsers/esedb_plugins/*.yaml
  parsers/olecf_plugins/*.yaml
  parsers/plist_plugins/*.yaml
  parsers/winreg_plugins/*.yaml
  preprocessors/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  libbde-python3 >= 20220121
  libcaes-python3 >= 20240114
  libcreg-python3 >= 20200725
  libesedb-python3 >= 20220806
  libevt-python3 >= 20191104
  libevtx-python3 >= 20220724
  libewf-python3 >= 20131210
  libfcrypto-python3 >= 20240114
  libfsapfs-python3 >= 20220709
  libfsext-python3 >= 20220829
  libfsfat-python3 >= 20220925
  libfshfs-python3 >= 20220831
  libfsntfs-python3 >= 20211229
  libfsxfs-python3 >= 20220829
  libfvde-python3 >= 20220121
  libfwnt-python3 >= 20210717
  libfwsi-python3 >= 20230710
  liblnk-python3 >= 20230716
  libluksde-python3 >= 20220121
  libmodi-python3 >= 20210405
  libmsiecf-python3 >= 20150314
  libolecf-python3 >= 20151223
  libphdi-python3 >= 20220228
  libqcow-python3 >= 20201213
  libregf-python3 >= 20201002
  libscca-python3 >= 20190605
  libsigscan-python3 >= 20230109
  libsmdev-python3 >= 20140529
  libsmraw-python3 >= 20140612
  libvhdi-python3 >= 20201014
  libvmdk-python3 >= 20140421
  libvsapm-python3 >= 20230506
  libvsgpt-python3 >= 20211115
  libvshadow-python3 >= 20160109
  libvslvm-python3 >= 20160109
  python3-XlsxWriter >= 0.9.3
  python3-acstore >= 20230519
  python3-artifacts >= 20220219
  python3-bencode
  python3-certifi >= 2016.9.26
  python3-cffi >= 1.9.1
  python3-chardet >= 2.0.1
  python3-dateutil >= 1.5
  python3-defusedxml >= 0.5.0
  python3-dfdatetime >= 20221112
  python3-dfvfs >= 20240115
  python3-dfwinreg >= 20211207
  python3-dtfabric >= 20230518
  python3-future >= 0.16.0
  python3-idna >= 2.5
  python3-lz4 >= 0.10.0
  python3-opensearch
  python3-pefile >= 2021.5.24
  python3-psutil >= 5.4.3
  python3-pyparsing >= 3.0.0
  python3-pytsk3 >= 20210419
  python3-pytz
  python3-pyyaml >= 3.10
  python3-redis >= 3.4
  python3-requests >= 2.18.0
  python3-six >= 1.1.0
  python3-urllib3 >= 1.21.1
  python3-xattr >= 0.7.2
  python3-yara >= 3.4.0
  python3-zmq >= 2.1.11
  python3-zstd >= 1.3.0.2

[bdist_wheel]
universal = 1
