[metadata]
name = plaso
version = 20240826
description = Plaso (log2timeline) - Super timeline all the things
long_description = Plaso (log2timeline) is a framework to create super timelines. Its purpose is to extract timestamps from various files found on typical computer systems and aggregate them.
long_description_content_type = text/plain
url = https://github.com/log2timeline/plaso
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  plaso = plaso
packages = find:
python_requires = >=3.8

[options.package_data]
plaso =
  data/*.*
  data/formatters/*.yaml
  parsers/*.yaml
  parsers/esedb_plugins/*.yaml
  parsers/olecf_plugins/*.yaml
  parsers/plist_plugins/*.yaml
  parsers/winreg_plugins/*.yaml
  preprocessors/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[options.entry_points]
console_scripts =
  image_export = plaso.scripts.image_export:Main
  log2timeline = plaso.scripts.log2timeline:Main
  pinfo = plaso.scripts.pinfo:Main
  psort = plaso.scripts.psort:Main
  psteal = plaso.scripts.psteal:Main

[bdist_wheel]
universal = 1
